--- a/appendix2.tex
+++ b/appendix2.tex
@@ -27,7 +27,7 @@ Following \cite{FlyerLehto11}, \ref{eq:sfc_gradient_operator} takes on the follo
 [ \mathbf{p}_{x} \cdot \nabla{f(\vx)}] |_{\vx = \vx_{c}} = \sum_{k=1}^{n} c_{k} \underbrace{\left[ x_{c} \vx_{c}^{T} \vx_{k} - x_{k} \right] \frac{1}{r} \d{\phi(r(x_{c}))}{r}}_{B_{c,k}^{\mathbf{p}_{x}}}. 
 \label{eq:xsfc_operator_flyer_et_al}
 \end{equation}
-and so forth for the $\mathbf{p}_{y}, \mathbf{p}_{z}$ operators, where $\vx_{c}$ is the stencil center and $\vx_{k}$ are stencil nodes. To compute RBF-FD weights for the $\mathbf{p}_{x}$ operator, the RHS of Equation~\ref{eq:rbffd_weight_system} is filled with elements $B_{c,k}^{\mathbf{p}_{x}}$. We will refer to this method of obtaining the weights as the \emph{direct} method due to the ability to directly compute weights for operators $\mathbf{P} \nabla \phi_{k}(r(\vx))$ without the need to compute other weights.
+and so forth for the $\mathbf{p}_{y}, \mathbf{p}_{z}$ operators, where $\vx_{c}$ is the stencil center and $\vx_{k}$ are stencil nodes. To compute RBF-FD weights for the $\mathbf{p}_{x}$ operator, the RHS of Equation~\ref{eq:rbffd_weight_system} is filled with elements $B_{c,k}^{\mathbf{p}_{x}}$. We will refer to this method of obtaining the weights as the \emph{direct} method due to the ability to directly compute RBF-FD weights for operators $\mathbf{P} \nabla \phi_{k}(r(\vx))$ without the need to compute other weights.
 
 \section{Indirect Weights} 
 
@@ -43,12 +43,12 @@ Alternatively, I have found that if we have computed the weights corresponding t
 	\end{subfigure}
 	\begin{subfigure}[b]{0.425\textwidth}
 	\includegraphics[width=1.0\textwidth]{figures/chapter2/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/pdx_sph32_times_sin20x.pdf}
-	\caption{$x$-component of the projected gradient: \\  $\mathbf{p}_{x} \cdot \nabla f(\vx)$.  }
+	\caption{$x$-component of the projected gradient: $\mathbf{p}_{x} \cdot \nabla f(\vx)$.  }
 	\end{subfigure}
 	
 	\begin{subfigure}[b]{0.425\textwidth}
 	\includegraphics[width=1.0\textwidth]{figures/chapter2/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/lsfc_sph32_times_sin20x.pdf}
-	\caption{$\LaplaceBeltrami f(\vx)$.  }
+	\caption{Surface Laplacian: $\LaplaceBeltrami f(\vx)$.  }
 	\end{subfigure}
 	\caption{Test function and its projected $x$ derivatives. }
 \end{figure}
@@ -58,6 +58,7 @@ Alternatively, I have found that if we have computed the weights corresponding t
 	\centering
 	\begin{subfigure}[b]{0.425\textwidth}
 	\includegraphics[width=1.0\textwidth]{figures/chapter2/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/direct_rel_l2_error.pdf}
+	\caption{$\LaplaceBeltrami$ of }
 		\end{subfigure}
 	\begin{subfigure}[b]{0.425\textwidth}
 \includegraphics[width=1.0\textwidth]{figures/chapter2/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32/direct_rel_l2_error.pdf}
