--- a/chapter1.tex
+++ b/chapter1.tex
@@ -214,7 +214,8 @@ no results from scaling tests. Yokota, Barba and Knepley \cite{Yokota2010} apply
     \label{fig:rbfInterpolation}
 \end{figure}
 
-%To our knowledge, this paper presents the first implementation of RBF-FD 
+%To our knowledge, this paper presents the first implementation of RBF-FD
+
 Within this dissertation, we have developed the first implementation of RBF-FD
 to span multiple CPUs. Each CPU has a corresponding GPU attached to it
 in a one-to-one correspondence. We thus also introduced the first known 
@@ -228,6 +229,7 @@ We present our explicit and implicit solutions to PDEs with our multi-GPU RBF-FD
 
 \section{Fragments (integrate above) }
 
+with the goal of solving coupled fluid flows modelling the physics (?) in the interior of the earth. We require both advective terms and diffusive terms. The components of a good pressure fluid solver are explicit and implicit differentiation. Whether we solve a steady-state PDE implicitly or a hyperbolic PDE with an implicit time-scheme, we require an \emph{implicit solver}. An implicit solver is nothing but a method of assembling a differentiation matrix, forcing terms on the RHS and then solving the linear system. A direct LU factorization would suffice if our system is dense, but with RBF-FD the system is sparse. Sparse systems can be efficiently solved under the right conditions through sparse iterative solvers. :
 
 
 Sufficient understanding of RBF interpolation led to the development of the first global RBF method for PDEs in \cite{Kansa1990a}. Most popular among global methods is collocation, wherein RBF interpolation approximates the PDE solution by solving a large, dense linear system. 
