--- a/macros/aliases.tex
+++ b/macros/aliases.tex
@@ -4,6 +4,7 @@
 \newcommand{\vv}{\mathbf{v}}
 \newcommand{\vu}{\mathbf{u}}
 \newcommand{\vx}{\mathbf{x}}
+\newcommand{\D}{\mathbf{D}}
 
 \newcommand{\Laplacian}[1]{\nabla^2 #1}
 \newcommand{\LaplaceBeltrami}[1]{\Delta_S #1}
