--- a/appendix1.tex
+++ b/appendix1.tex
@@ -1,44 +1,61 @@
 %!TEX root = karen.tex
 \chapter{Avoiding Pole Singularities with RBF-FD}
-
 This content follows \cite{FlyerWright07}. 
 
-Let $r = || x - x_j ||$ be the Euclidean distance which is invariant of the coordinate system. In Cartesian coordinates, we have
+Within the test cases of this dissertation, we solve convective PDEs on the unit sphere with the form: 
 $$
-r = \sqrt{(x-x_j)^2 + (y-y_j)^2 + (z-z_j)^2}.
+\pd{h}{t} = \vu \cdot \nabla h
 $$
-For the spherical coordinate system defined by
-\begin{align}
+where $\vu$ is velocity. For example, the cosine bell advection has this particular form:
+\begin{equation}
+\pd{h}{t} = \frac{u}{\cos{\theta}} \pd{h}{\lambda} + v \pd{h}{\theta} \label{eq:cosine_bell_appendix}
+\end{equation}
+in the spherical coordinate system defined by
+\begin{align*}
 x & = \cos{\theta}\cos{\lambda} \\
 y & = \cos{\theta}\sin{\lambda} \\
 z & = \sin{\theta}
-\end{align}
-where $\theta \in (-\frac{\pi}{2}, \frac{\pi}{2})$ is the elevation angle and $\lambda \in (-\pi,\pi)$ is the azimuthal angle, we have
+\end{align*}
+where $\theta \in (-\frac{\pi}{2}, \frac{\pi}{2})$ is the elevation angle and $\lambda \in (-\pi,\pi)$ is the azimuthal angle.
+Observe that as $\theta \rightarrow \pm \frac{\pi}{2}$, the $\frac{1}{\cos{\theta}}$ term goes to infinity and causes a discontinuity. 
+
+One of the many selling points for RBF-FD and other RBF methods is their ability analytically avoid pole singularities, which arise from the choice of coordinate system and not the choice of numerical method. 
+Here we demonstrate how to analytically avoid the pole singularities with RBF-FD.  
+
+
+Let $r = || \vx - \vx_j ||$ be the Euclidean distance which is invariant of the coordinate system. In Cartesian coordinates, we have
 $$
-r = \sqrt{2(1-\cos{\theta}\cos{\theta_j}\cos{(\lambda-\lambda_j)} - \sin{\theta}\sin{\theta_j})}
+r = \sqrt{(x-x_j)^2 + (y-y_j)^2 + (z-z_j)^2}.
+$$
+In spherical coordinates we have:
+$$
+r = \sqrt{2(1-\cos{\theta}\cos{\theta_j}\cos{(\lambda-\lambda_j)} - \sin{\theta}\sin{\theta_j})}.
 $$
 
-\authnote{Finish: 1) $\grad$ operator in spherical. 2) the chain rule. 3) then finish with }
-
-Note that in the code if one computes the \emph{true weights} to approximate $\d{}{\lambda}$, then they have an explicit system that takes the form: 
-
-$$
-\d{h}{t} = \frac{u}{\cos{\theta}} ( \cos{\theta}\cos{\theta_j}\sin{(\lambda - \lambda_j)} \frac{1}{r} \d{\phi_j}{r}) + v (\sin{\theta}\cos{\theta_j}\cos{(\lambda-\lambda_j)} - \cos{\theta}\sin{\theta_j} \frac{1}{r} \d{\phi}{r})
-$$
-
-In double precision the computer evaluate the expression $\frac{1}{\cos{\theta}}$ to some very large number ($1.6 * 10^{16}$) but is not ``inf" or ``NaN". The large value allows the $\cos{(\frac{\pi}{2}) = 6.1 * 10^{-17}}$ in the operator to cancel the term rather than appear as a singularity. The latter two values (``inf" and ``NaN" would not null out, but instead corrupt the solution. Therefore, while it functions to write code generally following Eq\ref{need_ref_here}, it is better practice to analytically remove the singularity and evaluate the system as: 
-
-The proper way to solve this in code, however, is to analytically cancel the $\frac{1}{\cos{\theta}}$ in order to avoid singularities at the pole, so we are left with the following weight operators: 
+The RBF-FD operators for $\d{}{\lambda}, \d{}{\theta}$ can be discretized with the chain rule: 
 
 \begin{align}
-D_\lambda & = \cos{\theta_j}\sin{\lambda - \lambda_j} \frac{1}{r} \d{\phi_j}{r} \\
-D_\theta &=  \sin{\theta}\cos{\theta_j}\cos{\lambda-\lambda_j} - \cos{\theta}\sin{\theta_j} \frac{1}{r} \d{\phi}{r}
+\d{\phi_{j}(r)}{\lambda} = \d{r}{\lambda} \d{\phi_{j}(r)}{r} & = \frac{\cos{\theta}\cos{\theta_j}\sin{(\lambda - \lambda_j)}}{r} \d{\phi_j(r)}{r}, \label{eq:rbfffd_d_dlambda} \\
+\d{\phi_{j}(r)}{\theta} = \d{r}{\theta} \d{\phi_{j}(r)}{r} & = \frac{\sin{\theta}\cos{\theta_j}\cos{(\lambda-\lambda_j)} - \cos{\theta}\sin{\theta_j}}{r} \d{\phi}{r}, \label{eq:rbfffd_d_dtheta}
+\end{align}
+where $\phi_{j}(r)$ is the RBF centered at $\vx_{j}$. 
+
+Plugging \ref{eq:rbfffd_d_dlambda} and \ref{eq:rbfffd_d_dtheta} into \ref{eq:cosine_bell_appendix}, produces the following explicit form: 
+\begin{align*}
+\d{h}{t} = u(\cos{\theta_j}\sin{(\lambda - \lambda_j)} \frac{1}{r} \d{\phi_j}{r}) + v (\sin{\theta}\cos{\theta_j}\cos{(\lambda-\lambda_j)} - \cos{\theta}\sin{\theta_j} \frac{1}{r} \d{\phi}{r}) 
+\end{align*}
+where $\cos{\theta}$ from \ref{eq:rbfffd_d_dlambda} analytically cancels with the $\frac{1}{\cos{\theta}}$ in \ref{eq:cosine_bell_appendix}.
+
+
+Then, formally, within the code one would compute weights and assemble the differentiation matrices: 
+\begin{align}
+\D_\lambda & = \cos{\theta_j}\sin{(\lambda - \lambda_j)} \frac{1}{r} \d{\phi_j}{r}, \label{eq:dm_lambda} \\
+\D_\theta &=  \sin{\theta}\cos{\theta_j}\cos{(\lambda-\lambda_j)} - \cos{\theta}\sin{\theta_j} \frac{1}{r} \d{\phi}{r}, \label{eq:dm_theta}
 \end{align} 
-
-and then write the explicit solver to evaluate: 
-
+and solve the explicit method of lines problem:
 $$
-\d{h}{t} = u D_\lambda h + v D_\theta h
+\d{h}{t} = u \D_\lambda h + v \D_\theta h
 $$
-
 where now the system is completely free of singularities at the poles. 
+
+We note that the expression $\cos{(\frac{\pi}{2})}$ evaluates on some systems to a very small number rather than zero (e.g., $6.1(10^{-17}$) on the Keeneland system and GNU gcc toolchain). The small value in turn allows $\frac{1}{\cos{\theta}}$ to evaluate to a large value (e.g., $1.6(10^{16})$) rather than ``inf" or ``NaN". The large value allows the cosine terms to cancel, whereas an ``inf'' or ``NaN'' would corrupt the solution. One could write general code to compute weights for \ref{eq:rbfffd_d_dlambda} and solve the PDE if the computation is not corrupted, but it is better practice to use the specific operators \ref{eq:dm_lambda}, \ref{eq:dm_theta}.
