--- a/appendix2.tex
+++ b/appendix2.tex
@@ -33,6 +33,7 @@ and so forth for the $\mathbf{p}_{y}, \mathbf{p}_{z}$ operators, where $\vx_{c}$
 
 Alternatively, one could compute weights \emph{indirectly} by first assembling differentiation matrices for the unprojected $\nabla$ operator, and then apply the projection $\mathbf{P}$ to the differentiation matrices rather than the RHS of Equation~\ref{eq:rbffd_weight_system}. 
 
+In other words, we have the system 
 
 \begin{figure}[htbp]
 	\centering
