Testing clean build again

--- a/macros/aliases.tex
+++ b/macros/aliases.tex
@@ -4,6 +4,8 @@
 \newcommand{\vv}{\mathbf{v}}
 \newcommand{\vu}{\mathbf{u}}
 \newcommand{\vx}{\mathbf{x}}
+\newcommand{\vy}{\mathbf{y}}
+\newcommand{\vz}{\mathbf{z}}
 \newcommand{\D}{\mathbf{D}}
 
 \newcommand{\Laplacian}[1]{\nabla^2 #1}
