--- a/appendix2.tex
+++ b/appendix2.tex
@@ -14,8 +14,8 @@ where $\mathbf{p}_{x}^{T}$ represents the projection operator in the $x$ directi
 
 From \cite{FlyerWright09}, the projected RBF gradient operator is:
 \begin{align}
-\mathbf{P} \nabla \phi_{k}(r(\vx)) & = \mathbf{P}\frac{(\vx-\vx_{k})}{r(\vx)} \d{\phi_{k}(r(\vx))}{r(\vx)}  \nonumber \\
-& = -\mathbf{P} \vx_{k}\frac{1}{r(\vx)} \d{\phi_{k}(r(\vx))}{r(\vx)} \label{eq:xsfc_negative} \\
+\mathbf{P} \cdot \nabla \phi_{k}(r(\vx)) & = \mathbf{P} \cdot \frac{(\vx-\vx_{k})}{r(\vx)} \d{\phi_{k}(r(\vx))}{r(\vx)}  \nonumber \\
+& = -\mathbf{P} \cdot \vx_{k}\frac{1}{r(\vx)} \d{\phi_{k}(r(\vx))}{r(\vx)} \label{eq:xsfc_negative} \\
 & = \begin{bmatrix} x \vx^{T} \vx_{k} - x_{k} \\  y \vx^{T} \vx_{k} - y_{k} \\  z \vx^{T} \vx_{k} - z_{k} \end{bmatrix} \frac{1}{r(\vx)} \d{\phi(r(\vx))}{r} \label{eq:sfc_gradient_operator}.
 \end{align}
 The operator $\mathbf{I} - \vx \vx^{T}$ for $\vx = (x,y,z)$ projects a vector onto the plane tangent to the unit sphere at $(x,y,z)$. Therefore, Equation~\ref{eq:sfc_gradient_operator} gives the projection of the gradient operator at $\vx_{k}$ onto the plane tangent to $\vx$. 
@@ -27,21 +27,31 @@ Following \cite{FlyerLehto11}, \ref{eq:sfc_gradient_operator} takes on the follo
 [ \mathbf{p}_{x} \cdot \nabla{f(\vx)}] |_{\vx = \vx_{c}} = \sum_{k=1}^{n} c_{k} \underbrace{\left[ x_{c} \vx_{c}^{T} \vx_{k} - x_{k} \right] \frac{1}{r} \d{\phi(r(x_{c}))}{r}}_{B_{c,k}^{\mathbf{p}_{x}}}. 
 \label{eq:xsfc_operator_flyer_et_al}
 \end{equation}
-and so forth for the $\mathbf{p}_{y}, \mathbf{p}_{z}$ operators, where $\vx_{c}$ is the stencil center and $\vx_{k}$ are stencil nodes. To compute RBF-FD weights for the $\mathbf{p}_{x}$ operator, the RHS of Equation~\ref{eq:rbffd_weight_system} is filled with elements $B_{c,k}^{\mathbf{p}_{x}}$. We will refer to this method of obtaining the weights as the \emph{direct} method due to the ability to directly compute RBF-FD weights for operators $\mathbf{P} \nabla \phi_{k}(r(\vx))$ without the need to compute other weights.
+and so forth for the $\mathbf{p}_{y}, \mathbf{p}_{z}$ operators, where $\vx_{c}$ is the stencil center and $\vx_{k}$ are stencil nodes. To compute RBF-FD weights for the $\mathbf{p}_{x}$ operator, the RHS of Equation~\ref{eq:rbffd_weight_system} is filled with elements $B_{c,k}^{\mathbf{p}_{x}}$. We will refer to this method of obtaining the weights as the \emph{direct} method due to the ability to directly compute RBF-FD weights for operators $\mathbf{P} \cdot \nabla \phi_{k}(r(\vx))$ without the need to compute other weights.
 
 \section{Indirect Weights} 
 
-Alternatively, one could compute weights \emph{indirectly} by first assembling differentiation matrices for the unprojected $\nabla$ operator, 
+Alternatively, one could compute weights \emph{indirectly} as a weighted combination of the weights for the unprojected $\nabla$ operator. 
+
+Have not found in literature any mention of the fact that RBF-FD weights can be used to 
+
+
+first assembling differentiation matrices for the unprojected $\nabla$ operator, 
 $$
 \D_{\nabla} = \begin{bmatrix} \D_{\d{}{x}} \\ \D_{\d{}{y}} \\ \D_{\d{}{z}} \end{bmatrix}
 $$
 where the matrices contain weights for the operators of Equation~\ref{eq:rbffd_grad_weights}, and then apply the projection $\mathbf{P}$ to the differentiation matrices: 
 \begin{equation}
-\mathbf{P} \cdot \D_{\nabla} = \begin{bmatrix} \D_{\mathbf{p_{x}}} \\  \D_{\mathbf{p_{y}}} \\  \D_{\mathbf{p_{z}}} \end{bmatrix}
-\end{equation}
- 
+\mathbf{P} \cdot \D_{\nabla} = \begin{bmatrix} \D_{\mathbf{p_{x} \cdot \nabla}} \\  \D_{\mathbf{p_{y}\cdot \nabla}} \\  \D_{\mathbf{p_{z}\cdot \nabla}} \end{bmatrix} = \begin{bmatrix} 
+diag(1-X^{2}) \D_{\d{}{x}} - diag(XY) \D_{\d{}{y}} - diag(XZ) \D_{\d{}{z}} \\
+- diag(XY)\D_{\d{}{x}} + diag(1-Y^{2}) \D_{\d{}{y}} - diag(YZ) \D_{\d{}{z}} \\
+- diag(XZ)\D_{\d{}{x}} - diag(YZ) \D_{\d{}{y}} + diag(1-Y^{2}) \D_{\d{}{z}} \\
 
-In other words, we have the system 
+\end{bmatrix}
+\end{equation}
+ where $X = \{x_{c,i}\}_{i=1}^{N}$, $Y = \{y_{c,i}\}_{i=1}^{N}$, $Z = \{z_{c,i}\}_{i=1}^{N}$ are all x-components, y-components and z-components of the stencil centers $\{\vx_{c,i}\}_{i=1}^{N}$ respectively. 
+
+In other words, we are able to compose differentiation matrices for complicated operators based on previously computed weights for the $\nabla$
 
 \begin{figure}[htbp]
 	\centering
@@ -67,13 +77,15 @@ In other words, we have the system
 	\centering
 	\begin{subfigure}[b]{0.425\textwidth}
 	\includegraphics[width=1.0\textwidth]{figures/chapter2/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/direct_rel_l2_error.pdf}
-	\caption{$\LaplaceBeltrami$ of }
+	\caption{$\LaplaceBeltrami$ of $Y_{3}^{2} \sin(20 x)$}
 		\end{subfigure}
 	\begin{subfigure}[b]{0.425\textwidth}
 \includegraphics[width=1.0\textwidth]{figures/chapter2/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32/direct_rel_l2_error.pdf}
+	\caption{$\mathbf{p}_{x} \cdot \nabla ( Y_{3}^{2})$ }
 	\end{subfigure}
 	\begin{subfigure}[b]{0.425\textwidth}
-\includegraphics[width=1.0\textwidth]{figures/chapter2/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/direct_rel_l2_error.pdf}
+	\includegraphics[width=1.0\textwidth]{figures/chapter2/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/direct_rel_l2_error.pdf}
+	\caption{$\mathbf{p}_{x} \cdot \nabla ( Y_{3}^{2} \sin(20 x))$ \authnote{rescale 1e0 down to 1e-8} }
 	\end{subfigure}
 	\caption{Relative $\ell_{2}$ error in differentiation.}
 \end{figure}
@@ -110,6 +122,28 @@ In other words, we have the system
 \includegraphics[width=0.425\textwidth]{figures/chapter2/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32/condest_dm_xsfc.pdf}
 \caption{Condition number estimates (condest) of direct $\mathbf{p}_{x}\nabla$ differentiation matrix}
 \end{figure}
+
+
+
+\section{Test Cases} 
+
+We computed direct and indirect approaches for the following node sets:
+\begin{verbatim} 
+'md010.00121'; 'md015.00256'; 'md019.00400'; 'md028.00841'; 
+'md031.01024'; 'md049.02500'; 'md063.04096'; 'md079.06400'; 
+'md089.08100' ; 'md100.10201' ; 'md127.16384' ; 'md165.27556'
+\end{verbatim}
+
+We check the relative error of the approximation: 
+$$ \text{relative $\ell_{2}$ error} = \frac{|| f_{approx} - f_{exact} ||_{2} }{ || f_{exact} ||_{2} } $$ 
+
+We also look at the difference of relative errors and its absolute value: 
+$$
+\text{(relative $\ell_{2}$ error)}_{\text{direct}} - \text{(relative $\ell_{2}$ error)}_{\text{indirect}}
+$$
+
+We find that our indirect approach functions well compared to the direct method. For small node sizes ($N < 2500$ nodes) we see that the direct method has the advantage with 
+
 \section{Conclusions}
 
 Although it is clear the indirect method functions well compared to the direct method, we must consider its usefulness. Typically, weights are computed only as necessary for the PDE. If the PDE is on the sphere, then directly computing the $\mathbf{P}\nabla$ operator would be most efficient for both memory and computation. However, one could imagine a scenario such as a 3-D spherical shell domain with physics on the boundaries that must be constrained to the surface, while the interior requires only an unprojected $\nabla$ operator. In such cases, by simply computing for the $\nabla$ operator, we assemble all necessary operators with minimal loss of accuracy and significant savings ($3Nn$ doubles) in storage. 
