--- a/karen.tex
+++ b/karen.tex
@@ -92,6 +92,7 @@
 \input{chapter4.tex} 
 \input{chapter5.tex} 
 \input{chapter6.tex}
+\input{chapter7.tex}
 
 \input{publications.tex}
 need Survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
