--- a/chapter3.tex
+++ b/chapter3.tex
@@ -170,16 +170,9 @@ Note that there is no non-blocking version of MPI\_alltoallv within the MPI stan
 %K. Kandalla, H. Subramoni, K. Tomko, D. Pekurovsky, S. Sur and D.K. Panda, "High-performance and scalable non-blocking all-to-all with collective offload on InfiniBand clusters: a study with parallel 3D FFT", Computer Science - Research and Development, vol. 26(3-4):237-246, 2011.
 %T. Hoefler, A. Lumsdaine and W. Rehm, "Implementation and Performance Analysis of Non-Blocking Collective Operations for MPI", International Conference for High Performance Computing, Networking, Storage and Analysis (SC07), Reno, USA, 2007.
 
-
-\section{Parallel Linear Algebra Primitives}
-The basic primitives necessary to parallelize our problems: SpMV, AXPY and 
-
-
-
-
-
-
 \section{Targeting the GPU}
+
+\authnote{The basic primitives necessary to parallelize our problems: SpMV, AXPY and }
 
 \subsection{Explicit Solvers}
 
@@ -273,7 +266,10 @@ For stencil sizes smaller than 32, some threads in the warp always remain idle. 
 As part of future work on optimization, we will consider a parallel reduction in shared memory, as well as assigning multiple stencils to a single warp for small  $n$. 
 
 
+\subsubsection{Boundary Conditions} 
+Boundary conditions are handled on the GPU in the following way: 
 
+dirichlet: kernel copies dirichlet values into place \authnote{Need to dust off code}
 
 
 
