posted a pdf to drop box. its linked to this karen.pdf so everytime I build it will update in dropbox (assuming DB is running)

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -198,7 +198,7 @@ Given $N$ total nodes in the domain (such as on the surface of a sphere), $N$ li
 \subsection{  Preconditionners (info on that) }
 \subsection{   Sparse matrix libraries }
 \subsection{  Various GPU/based libraries }
-\subsection{  Parallel implementations of RBF (there are any?)}
+\subsection{  Parallel implementations of RBF}
 
 RBF-FD have been successfully employed for a variety of problems including Hamilton-Jacobi equations \cite{Cecil2004}, convection-diffusion problems \cite{Chandhini2007, Stevens2009b},
 incompressible Navier-Stokes equations \cite{Shu2003,Chinchapatnam2009}, transport on the sphere \cite{FornbergLehto11}, and the shallow water equations \cite{FlyerLehto11}.
