Need to write more

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -290,6 +290,8 @@ where the bell of radius $R = \frac{a}{3}$ is centered at $(\lambda_c, \theta_c)
 \end{eqnarray*}
 We assume $a = 1$, $h_0 = 1$, and $(\lambda_c, \theta_c) = (^{3\pi}/_{2}, 0)$. The angle $\alpha =\ ^{\pi}/_{2}$ is chosen to transport the bell over the poles of the coordinate system, and $u_0 =\ ^{2 \pi a}/_{1036800}$. 
 
+\authnote{State that we can split operator to test cases like nonlinear PDEs.} 
+
 \authnote{Include figures from NCL or Paraview}
 
 
