Reduced file size of some figures

--- a/appendix2.tex
+++ b/appendix2.tex
@@ -80,7 +80,7 @@ But the question is, how accurate is it? In situations where memory is critical 
 	\includegraphics[width=1.0\textwidth]{figures/chapter2/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/lsfc_sph32_times_sin20x.pdf}
 	\caption{Surface Laplacian: $\LaplaceBeltrami f(\vx)$.  }
 	\end{subfigure}
-	\caption{Test function and its projected $x$ derivatives. }
+	\caption{Test function and its projected derivatives on the surface of the unit sphere. }
 \end{figure}
 
 \begin{figure}[htbp]
